# satcat5

./: .gitignore
src/python/satcat5/: pyproject.toml  requirements.txt
