[build-system]

# requires is a list of packages that are needed to build your package.
# You don’t need to install them;
# build frontends like pip will install them automatically in a temporary,
# isolated virtual environment for use during the build process
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"satcat5.config" = ["*.yml", "*.txt"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E265"]
# Ignore block comment should start with '# ' because it causes issues with environment definition for scripts

[tool.autopep8]
max_line_length = 120
in-place = 1
aggressive = 1
ignore = ""

# this is the [project] table
[project]
# add the distribution name of the package, the tar ball and python wheel use this name, this name goes the /home/$USER/.local/lib/python3.8/site-packages/
name = "satcat5"

dynamic = ["dependencies", "optional-dependencies"]

# version is the package version. See the version specifier specification
# for more details on versions. Some build backends allow it to be
# specified another way, such as from a file or a git tag.
version = "0.1.0"
authors = [
  { name="The Aerospace Corporation", email="sample@sample.com" }
]
description = "SATCAT5 Python files"
readme = "README.md"
license = { file="LICENSE" }

# installers like pip use this to check for matching python versions
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GPL",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# this installs executables in /home/$USER/.local/bin/
[project.scripts]

[project.urls]
"Homepage" = "https://github.com/the-aerospace-corporation/satcat5/"
"Bug Tracker" = "https://github.com/the-aerospace-corporation/satcat5/issues/"